--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Solid State</title>
+        <title>OGV</title>
         <link href="assets/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/ionicons.min.css">
         <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,400i,700,700i" rel="stylesheet">
@@ -34,7 +34,6 @@
                     <h2>Menu</h2>
                     <ul class="links">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="elements.html">Elements</a></li>
                         <!-- <li><a href="#">Log In</a></li>
                         <li><a href="#">Sign Up</a></li> -->
                     </ul>
@@ -47,31 +46,33 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>MAX OUT YOUR USER EXPERIENCE</h2>
+                        <h2>AIESEC Católica</h2>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-12"> 
-                        <p>ANOTHER FREE + FULLY RESPONSIVE SITE TEMPLATE BY <a href="http://www.themewagon.com">THEMEWAGON</a></p>
+                        <p>¡Bienvenidos Hotties!</p>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-12">
-                        <a href="#" class="btn btn-banner">DEFAULT</a>
+                        <a href="#booklet" class="btn btn-banner">BOOKLET</a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="one">
+        <!----- Booklet section ---->
+        
+        <section id="booklet">
             <div class="container">
                 <div class="one-features">
                     <div class="row">
                         <div class="col-md-8">
                             <div class="section-highlight">
-                                <h2>BEST SPORTS HEADPHONE EVER</h2>
+                                <h2>Nuestro Booklet</h2>
                             </div>
                             <div class="section-details">
                                 <p>
@@ -80,55 +81,9 @@
                                 <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <!----- <div class="col-md-4">
                             <img src="assets/images/03_headephone.png" alt="Responsive image" class="img-responsive">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="two">
-            <div class="container">
-                <div class="two-features">
-                    <div class="row">
-                        <div class="col-md-4">
-                        <img src="assets/images/04_shoe.png" alt="Responsive image" class="img-responsive">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="section-highlight">
-                                <h2>WHY YOU LIKE OUR SHOES?</h2>
-                            </div>
-                            <div class="section-details">
-                                <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.
-                                </p>
-                                <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="three">
-            <div class="container">
-                <div class="three-features">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <div class="section-highlight">
-                                <h2>YANKEES BASEBALL CAP</h2>
-                            </div>
-                            <div class="section-details">
-                                <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.
-                                </p>
-                                <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <img src="assets/images/05_cap.png" alt="Responsive image" class="img-responsive">
-                        </div>
+                        </div> ---->
                     </div>
                 </div>
             </div>
@@ -303,7 +258,7 @@
                 <div class="footer-bottom">
                     <div class="row">
                         <div class="col-md-12">
-                            <p>&copy; TECHNEXT 2016. ALL RIGHTS RESERVED BY <a href="http://www.themewagon.com" target="_blank">THEMEWAGON</a></p>
+                            <p>&copy; OGV 2020. All Rights Reserved <b>Mauricio Gallardo</b></p>
                         </div>
                     </div>
                 </div>
