--- a/index.html
+++ b/index.html
@@ -69,11 +69,14 @@
         
         <section id="booklet">
             <div class="container">
-                <div class="one-features">
+                <div class="two-features">
                     <div class="row">
+                        <div class="col-md-4">
+                        <img src="assets/images/04_shoe.png" alt="Responsive image" class="img-responsive">
+                        </div>
                         <div class="col-md-8">
                             <div class="section-highlight">
-                                <h2>Nuestro Booklet</h2>
+                                <h2>WHY YOU LIKE OUR SHOES?</h2>
                             </div>
                             <div class="section-details">
                                 <p>
@@ -82,9 +85,6 @@
                                 <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
                             </div>
                         </div>
-                        <!----- <div class="col-md-4">
-                            <img src="assets/images/03_headephone.png" alt="Responsive image" class="img-responsive">
-                        </div> ---->
                     </div>
                 </div>
             </div>
