--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@
             </div>
         </section>======= -->
         
+	  <br>
+	  <br>
         <!-- =======  Herramientas  ======= -->
-		<section id="XD" class="productoleft">
+		<section id="booklet" class="productoleft">
       <div class="container" data-aos="fade-up">
        <div class="section-title">
           <p style="text-align: center">
