--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         
 	  <br>
 	  <br>
-        <!-- =======  Herramientas  ======= -->
+        <!-- =======  Booklet  ======= -->
 		<section id="booklet" class="productoleft">
       <div class="container" data-aos="fade-up">
        <div class="section-title">
@@ -125,139 +125,104 @@
   </section>
 	<!-- ======= FIN Booklet ======= -->
 
-        <section id="two">
-            <div class="container">
-                <div class="two-features">
-                    <div class="row">
-                        <div class="col-md-4">
-                        <img src="assets/images/04_shoe.png" alt="Responsive image" class="img-responsive">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="section-highlight">
-                                <h2>WHY YOU LIKE OUR SHOES?</h2>
-                            </div>
-                            <div class="section-details">
-                                <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.
-                                </p>
-                                <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
-                            </div>
-                        </div>
-                    </div>
+        <!-- ======= Nuestro equipo ======= -->
+    <section id="aboutus" class="team">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Nuestro equipo</h2>
+          <p>Conoce un poco más de nosotros.</p>
+          <a class="cta-btn" href="https://grupo-17.github.io/equipo-17/sobrenosotros.html">Leer más</a>
+        </div>
+
+
+        <div class="row">
+
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="member">
+              <img src="" class="img-fluid" alt=""><!----FALTA FOTO------>
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Susan Pedraza</h4>
+                  <span>Team Leader</span>
                 </div>
+                <div class="social">
+                  <a href="https://wa.me/51926901701?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*"><i class="icofont-whatsapp"></i></a>
+                  <a href=""><i class="icofont-instagram"></i></a>
+                </div>
+              </div>
             </div>
-        </section>
+          </div>
 
-        <section id="three">
-            <div class="container">
-                <div class="three-features">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <div class="section-highlight">
-                                <h2>YANKEES BASEBALL CAP</h2>
-                            </div>
-                            <div class="section-details">
-                                <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.
-                                </p>
-                                <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <img src="assets/images/05_cap.png" alt="Responsive image" class="img-responsive">
-                        </div>
-                    </div>
+          <div class="col-xl-3 col-lg-4 col-md-6" data-wow-delay="0.1s">
+            <div class="member">
+              <img src="https://grupo-17.github.io/externo/foto/foto2.PNG" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Mauricio Gallardo</h4>
+                  <span>Representante de Intercambios Sociales Salientes</span>
                 </div>
+                <div class="social">
+                  <a href="https://wa.me/51989265615?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*"><i class="icofont-whatsapp"></i></a>
+                  <a href=""><i class="icofont-instagram"></i></a>
+                </div>
+              </div>
             </div>
-        </section>
+          </div>
 
-        <section id="aboutus">
-                <div class="container">
-                    <div class="four-top">
-                        <div class="section-heading">
-                            <div class="title">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <h2>Sobe nosotros</h2>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="subtitle">
-                                <div class="row">                                       
-                                    <div class="col-md-9 col-md-offset-1">
-                                        <p>
-                                            Información sobre cada uno de los integrantes 
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+          <div class="col-xl-3 col-lg-4 col-md-6" data-wow-delay="0.2s">
+            <div class="member">
+              <img src="" class="img-fluid" alt=""><!----FALTA FOTO------>
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Pamela Catillo</h4>
+                  <span>Representante de Intercambios Sociales Salientes</span>
                 </div>
-
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="four-features four-features-left-bottom">
-                                <div class="features-img">
-                                    <img src="assets/images/07.jpg" alt="Responsive image" class="img-responsive">
-                                </div>
-                                <div class="features-content">
-                                    <h3>Susan Pedraza</h3>
-                                    <p>
-                                        Escribir breve biografía
-                                    </p>
-                                    <a href="https://wa.me/51926901701?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctala <i class="ion-ios-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="four-features four-features-right-bottom">
-                                <img src="assets/images/08.jpg" alt="Responsive image" class="img-responsive">
-                                <div class="features-content">
-                                    <h3>Mauricio Gallardo</h3>
-                                    <p>
-                                        Escribir breve biografía
-                                    </p>
-                                    <a href="https://wa.me/51989265615?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctalo <i class="ion-ios-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="four-features four-features-left-top">
-                            <img src="assets/images/09.jpg"  alt="Responsive image" class="img-responsive">
-                                <div class="features-content">
-                                    <h3>Guianela Gil</h3>
-                                    <p>
-                                        Escribir breve biografía
-                                    </p>
-                                    <a href="https://wa.me/51993181576?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctala <i class="ion-ios-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="four-features four-features-right-top">
-                                <img src="assets/images/10.jpg" alt="Responsive image" class="img-responsive">
-                                <div class="features-content">
-                                    <h3>Diego Pozo</h3>
-                                    <p>
-                                        Escribir breve biografía
-                                    </p>
-                                    <a href="https://wa.me/51989265615?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctalo <i class="ion-ios-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <a href="#" class="btn btn-expand-all">EXPAND ALL</a>
-                        </div>
-                    </div>
+                <div class="social">
+                  <a href="https://wa.me/51918028285?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*"><i class="icofont-whatsapp"></i></a>
+                  <a href=""><i class="icofont-instagram"></i></a>
                 </div>
-        </section>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xl-3 col-lg-4 col-md-6" data-wow-delay="0.3s">
+            <div class="member">
+              <img src="" class="img-fluid" alt=""><!----FALTA FOTO------>
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Guianela Gil</h4>
+                  <span>Representante de Intercambios Sociales Salientes</span>
+                </div>
+                <div class="social">
+                  <a href="https://wa.me/51993181576?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*"><i class="icofont-whatsapp"></i></a>
+                  <a href=""><i class="icofont-instagram"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+           <div class="col-xl-3 col-lg-4 col-md-6" data-wow-delay="0.2s">
+            <div class="member">
+              <img src="" class="img-fluid" alt=""> <!----FALTA FOTO------>
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Diego Pozo</h4>
+                  <span>Representante de Intercambios Sociales Salientes</span>
+                </div>
+                <div class="social">
+                  <a href="https://wa.me/51948496867?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*"><i class="icofont-whatsapp"></i></a>
+                  <a href=""><i class="icofont-instagram"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Our Team Section -->
+
 
         <section id="footer">
             <div class="container">
@@ -266,16 +231,7 @@
                         <div class="title">
                             <div class="row">
                                 <div class="col-md-12">
-                                <h2>GET IN TOUCH</h2>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="subtitle">
-                            <div class="row">
-                                <div class="col-md-9 col-md-offset-1">
-                                    <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna.
-                                    </p>
+                                <h2>Contáctanos<h2>
                                 </div>
                             </div>
                         </div>
@@ -294,7 +250,7 @@
                                 <div class="form-group">
                                     <textarea class="form-control form-footer" rows="5" placeholder="Message"></textarea>
                                 </div>
-                                <button type="submit" class="btn btn-solid-state">Send Message</button>
+                                <button type="submit" class="btn btn-solid-state">Envía un mensaje</button>
                             </form>
                         </div>
                         <div class="col-md-6">
