--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
         </div>
         <div class="row">
           <div class="order-1 order-lg-2 offset-xl-0 col-xl-12 col-lg-12" data-aos="fade-up" data-aos-delay="100">
-		 <div style="position: relative; width: 100%; height: 0; padding-top: 75.0000%;
+		 <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
  padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
   <iframe style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEOeuNx0y0&#x2F;view?embed">
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEWc_GRHH4&#x2F;view?embed">
   </iframe>
 </div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEOeuNx0y0&#x2F;view?utm_content=DAEOeuNx0y0&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEWc_GRHH4&#x2F;view?utm_content=DAEWc_GRHH4&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">EP INDUCTION</a>
 
 		
   <center></iframe>
