--- a/index.html
+++ b/index.html
@@ -94,135 +94,35 @@
 	  <br>
         <!-- =======  Booklet  ======= -->
 		<section id="booklet" class="productoleft">
-      <div class="container" data-aos="fade-up">
-       <div class="section-title">
-          <p style="text-align: center">
+		      <div class="container" data-aos="fade-up">
+		       <div class="section-title">
+			  <p style="text-align: center">
 				      <h2 align="center"><strong>Nuestro Booklet</strong></h2>
-             <hr style="width:75%;">
-        </div>
-        <div class="row">
-          <div class="order-1 order-lg-2 offset-xl-0 col-xl-12 col-lg-12" data-aos="fade-up" data-aos-delay="100">
-		 <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
- padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEWc_GRHH4&#x2F;view?embed">
-  </iframe>
-</div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEWc_GRHH4&#x2F;view?utm_content=DAEWc_GRHH4&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">EP INDUCTION</a>
+             			<hr style="width:75%;">
+        		</div>
+				<div class="row">
+				  <div class="order-1 order-lg-2 offset-xl-0 col-xl-12 col-lg-12" data-aos="fade-up" data-aos-delay="100">
+					 <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+			 padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+			 border-radius: 8px; will-change: transform;">
+			  <iframe style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+			    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEWc_GRHH4&#x2F;view?embed">
+			  </iframe>
+			</div>
+			<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAEWc_GRHH4&#x2F;view?utm_content=DAEWc_GRHH4&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">EP INDUCTION</a>
 
 		
-  <center></iframe>
-</div>
-
-			 
-		 
-		
+		  <center></iframe>
 				</div>
+			</div>
 		</div>
         </div>
       </div>
   </section>
 	<!-- ======= FIN Booklet ======= -->
 
-        <!-- ======= Nuestro equipo ======= -->
-    <section id="aboutus" class="team">
-      <div class="container">
 
-        <div class="section-title">
-          <h2>Nuestro equipo</h2>
-          <p>Conoce un poco más de nosotros.</p>
-          <a class="cta-btn" href="https://grupo-17.github.io/equipo-17/sobrenosotros.html">Leer más</a>
-        </div>
-
-
-        <div class="row">
-
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="member">
-              <img src="" class="img-fluid" alt=""><!----FALTA FOTO------>
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Susan Pedraza</h4>
-                  <span>Team Leader</span>
-                </div>
-                <div class="social">
-                  <a href="https://wa.me/51926901701?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*"><i class="icofont-whatsapp"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-lg-4 col-md-6" data-wow-delay="0.1s">
-            <div class="member">
-              <img src="https://grupo-17.github.io/externo/foto/foto2.PNG" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Mauricio Gallardo</h4>
-                  <span>Representante de Intercambios Sociales Salientes</span>
-                </div>
-                <div class="social">
-                  <a href="https://wa.me/51989265615?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*"><i class="icofont-whatsapp"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-lg-4 col-md-6" data-wow-delay="0.2s">
-            <div class="member">
-              <img src="" class="img-fluid" alt=""><!----FALTA FOTO------>
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Pamela Catillo</h4>
-                  <span>Representante de Intercambios Sociales Salientes</span>
-                </div>
-                <div class="social">
-                  <a href="https://wa.me/51918028285?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*"><i class="icofont-whatsapp"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-lg-4 col-md-6" data-wow-delay="0.3s">
-            <div class="member">
-              <img src="" class="img-fluid" alt=""><!----FALTA FOTO------>
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Guianela Gil</h4>
-                  <span>Representante de Intercambios Sociales Salientes</span>
-                </div>
-                <div class="social">
-                  <a href="https://wa.me/51993181576?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*"><i class="icofont-whatsapp"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          
-           <div class="col-xl-3 col-lg-4 col-md-6" data-wow-delay="0.2s">
-            <div class="member">
-              <img src="" class="img-fluid" alt=""> <!----FALTA FOTO------>
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Diego Pozo</h4>
-                  <span>Representante de Intercambios Sociales Salientes</span>
-                </div>
-                <div class="social">
-                  <a href="https://wa.me/51948496867?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*"><i class="icofont-whatsapp"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Our Team Section -->
-
+	<!-- ======= Footer ======= -->
 
         <section id="footer">
             <div class="container">
