--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <h2>Menu</h2>
                     <ul class="links">
                         <li><a href="index.html">Home</a></li>
+			<li><a href="https://www.canva.com/design/DAEWc_GRHH4/SDJE10QqSUm2zdNM8O8etg/view?utm_content=DAEWc_GRHH4&utm_campaign=designshare&utm_medium=embeds&utm_source=link">Booklet</a></li>
                         <li><a href="#aboutus">Sobre Nosotros</a></li>
                         <!-- <li><a href="#">Log In</a></li>
                         <li><a href="#">Sign Up</a></li> -->
