--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                             <a href="https://www.facebook.com/AIESECPeru"><i class="ion-social-facebook icon-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a href="https://www.instagram.com/aiesecenperu/"><i class="ion-social-instragram icon-instragram"></i></a>
+                                            <a href="https://www.linkedin.com/company/aiesec-peru/"><i class="ion-social-linkedin icon-linkedin"></i></a>
                                         </li>
                                         <li>
                                             <a href="https://twitter.com/aiesec_peru"><i class="ion-social-twitter icon-twitter"></i></a>
