--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                     </li>
                                    
                                     <li class="list-table">
-                                        <i class="ion-email"></i><p>mauricio.gallardo@aiesec.net</p>
+                                        <i class="ion-email"></i><p>susan.pedraza@aiesec.net</p>
                                     </li>
                                 </ul>
                                 <div class="list-solid-state">
