--- a/index2.html
+++ b/index2.html
@@ -114,7 +114,7 @@
                                 <div class="row">                                       
                                     <div class="col-md-9 col-md-offset-1">
                                         <p>
-                                            Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urnamauris id tellus arcu.
+						Conoce un más sobre nosotros
                                         </p>
                                     </div>
                                 </div>
@@ -131,7 +131,7 @@
                                     <img src="assets/images/07.jpg" alt="Responsive image" class="img-responsive">
                                 </div>
                                 <div class="features-content">
-                                    <h3>MOUNTAIN HIKING</h3>
+                                    <h3 style="color:white;">Susan Pedraza</h3>
                                     <p>
                                     Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
                                     </p>
