--- a/index2.html
+++ b/index2.html
@@ -105,7 +105,7 @@
                             <div class="title">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <h2>Sobre Nosotros</h2>
+                                        <h2>Nuestro Equipo</h2>
                                     </div>
                                 </div>
                             </div>
