--- a/index2.html
+++ b/index2.html
@@ -132,10 +132,10 @@
                                 </div>
                                 <div class="features-content">
                                     <h3 style="color:white;">Susan Pedraza</h3>
-                                    <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+                                    <p style="color:white;">
+					    Escribir breve biografía
                                     </p>
-                                    <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
+                                    <a href="https://wa.me/51926901701?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctala<i class="ion-ios-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -143,11 +143,11 @@
                             <div class="four-features four-features-right-bottom">
                                 <img src="assets/images/08.jpg" alt="Responsive image" class="img-responsive">
                                 <div class="features-content">
-                                    <h3>SHOE SERVICES</h3>
-                                    <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+                                    <h3>Mauricio Gallardo</h3>
+                                    <p style="color:white;">
+					    Escribir breve biografía
                                     </p>
-                                    <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
+                                    <a href="https://wa.me/51989265615?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctalo<i class="ion-ios-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -157,12 +157,11 @@
                             <div class="four-features four-features-left-top">
                             <img src="assets/images/09.jpg"  alt="Responsive image" class="img-responsive">
                                 <div class="features-content">
-                                    <h3>MOUNTAIN VISION</h3>
-                                    <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+                                    <h3>Pamela Castillo</h3>
+                                    <p style="color:white;">
+					    Escribir breve biografía 
                                     </p>
-                                    <a href="#" class="btn btn-learn-more">
-                                    LEARN MORE <i class="ion-ios-arrow-right"></i>
+                                    <a href="https://wa.me/51918028285?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctala<i class="ion-ios-arrow-right"></i>
                                     </a>
                                 </div>
                             </div>
@@ -171,20 +170,25 @@
                             <div class="four-features four-features-right-top">
                                 <img src="assets/images/10.jpg" alt="Responsive image" class="img-responsive">
                                 <div class="features-content">
-                                    <h3>LIFE IN ADVENTURE</h3>
-                                    <p>
-                                    Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+                                    <h3>Diego Pozo</h3>
+                                    <p style="color:white;">
+					    Escribir breve biografía 
                                     </p>
-                                    <a href="#" class="btn btn-learn-more">
-                                    LEARN MORE <i class="ion-ios-arrow-right"></i>
-                                    </a>
+                                    <a href="https://wa.me/51948496867?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctala<i class="ion-ios-arrow-right"></i>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <a href="#" class="btn btn-expand-all">EXPAND ALL</a>
+			<div class="col-md-6">
+                            <div class="four-features four-features-right-top">
+                                <img src="assets/images/10.jpg" alt="Responsive image" class="img-responsive">
+                                <div class="features-content">
+                                    <h3>Guianela Gil</h3>
+                                    <p style="color:white;">
+					    Escribir breve biografía 
+                                    </p>
+                                    <a href="https://wa.me/51993181576?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctala<i class="ion-ios-arrow-right"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
