--- a/index2.html
+++ b/index2.html
@@ -143,7 +143,7 @@
                             <div class="four-features four-features-right-bottom">
                                 <img src="assets/images/08.jpg" alt="Responsive image" class="img-responsive">
                                 <div class="features-content">
-                                    <h3>Mauricio Gallardo</h3>
+                                    <h3 style="color:white;">Mauricio Gallardo</h3>
                                     <p style="color:white;">
 					    Escribir breve biografía
                                     </p>
@@ -157,7 +157,7 @@
                             <div class="four-features four-features-left-top">
                             <img src="assets/images/09.jpg"  alt="Responsive image" class="img-responsive">
                                 <div class="features-content">
-                                    <h3>Pamela Castillo</h3>
+                                    <h3 style="color:white;">Pamela Castillo</h3>
                                     <p style="color:white;">
 					    Escribir breve biografía 
                                     </p>
@@ -170,7 +170,7 @@
                             <div class="four-features four-features-right-top">
                                 <img src="assets/images/10.jpg" alt="Responsive image" class="img-responsive">
                                 <div class="features-content">
-                                    <h3>Diego Pozo</h3>
+                                    <h3 style="color:white;">Diego Pozo</h3>
                                     <p style="color:white;">
 					    Escribir breve biografía 
                                     </p>
@@ -182,7 +182,7 @@
                             <div class="four-features four-features-right-top">
                                 <img src="assets/images/10.jpg" alt="Responsive image" class="img-responsive">
                                 <div class="features-content">
-                                    <h3>Guianela Gil</h3>
+                                    <h3 style="color:white;">Guianela Gil</h3>
                                     <p style="color:white;">
 					    Escribir breve biografía 
                                     </p>
