--- a/index2.html
+++ b/index2.html
@@ -178,7 +178,7 @@
                                 </div>
                             </div>
                         </div>
-			<div class="col-md-6">
+			<div class="col-md-6" class="center">
                             <div class="four-features four-features-right-top">
                                 <img src="assets/images/10.jpg" alt="Responsive image" class="img-responsive">
                                 <div class="features-content">
