--- a/index2.html
+++ b/index2.html
@@ -174,7 +174,7 @@
                                     <p style="color:white;">
 					    Escribir breve biografía 
                                     </p>
-                                    <a href="https://wa.me/51948496867?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctala<i class="ion-ios-arrow-right"></i>
+                                    <a href="https://wa.me/51948496867?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20los%20*Voluntariados%20Globales*" class="btn btn-learn-more">Contáctalo<i class="ion-ios-arrow-right"></i>
                                 </div>
                             </div>
                         </div>
