--- a/index2.html
+++ b/index2.html
@@ -178,6 +178,12 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+        </section>
+
+        <!-- ======= END About us ======= -->
+        <section id="aboutus2">
 			<div class="col-md-6">
                             <div class="four-features four-features-right-top">
                                 <img src="assets/images/10.jpg" alt="Responsive image" class="img-responsive">
@@ -190,12 +196,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-        </section>
-
-        <!-- ======= END About us ======= -->
-        
+	</section>
 	<!-- ======= Footer ======= -->
 
         <section id="footer">
