--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <li><a href="index.html">Home</a></li>
 			<li><a href="https://www.canva.com/design/DAEWc_GRHH4/SDJE10QqSUm2zdNM8O8etg/view?utm_content=DAEWc_GRHH4&utm_campaign=designshare&utm_medium=embeds&utm_source=link">Booklet</a></li>
                         <li><a href="https://mauricio-gallardo22.github.io/OGV.hotties/aboutus.html">Sobre Nosotros</a></li>
-			<li><a href="https://www.canva.com/design/DAEWdHiav5E/VKsLhnHd80awcZQt1w4Y-A/view?utm_content=DAEWdHiav5E&utm_campaign=designshare&utm_medium=embeds&utm_source=link">Home</a></li>
+			<li><a href="https://www.canva.com/design/DAEWdHiav5E/VKsLhnHd80awcZQt1w4Y-A/view?utm_content=DAEWdHiav5E&utm_campaign=designshare&utm_medium=embeds&utm_source=link">Programas</a></li>
                         <!-- <li><a href="#">Log In</a></li>
                         <li><a href="#">Sign Up</a></li> -->
                     </ul>
